crates/haneul-package-resolver/src/snapshots/haneul_package_resolver__tests__function_parameters.snap
---
source: crates/haneul-package-resolver/src/lib.rs
expression: "format!(\"c0::m::foo: {foo:#?}\\n\\\n             c0::m::bar: {bar:#?}\\n\\\n             c0::m::baz: {baz:#?}\")"
---
c0::m::foo: []
c0::m::bar: [
    OpenSignature {
        ref_: Some(
            Immutable,
        ),
        body: Datatype(
            DatatypeRef {
                package: 00000000000000000000000000000000000000000000000000000000000000c0,
                module: "m",
                name: "T0",
            },
            [],
        ),
    },
    OpenSignature {
        ref_: Some(
            Mutable,
        ),
        body: Datatype(
            DatatypeRef {
                package: 00000000000000000000000000000000000000000000000000000000000000a1,
                module: "n",
                name: "T1",
            },
            [],
        ),
    },
]
c0::m::baz: [
    OpenSignature {
        ref_: None,
        body: U8,
    },
]
